--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-modern-drawer": "^1.4.0",
     "react-parallax-tilt": "^1.7.282",
     "react-tabs": "^6.1.0",
+    "react-toast": "^1.0.3",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
