--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "react-modern-drawer": "^1.4.0",
     "react-parallax-tilt": "^1.7.282",
     "react-tabs": "^6.1.0",
